--- a/autoinstall.yml
+++ b/autoinstall.yml
@@ -25,8 +25,9 @@ autoinstall:
     updates: all
     shutdown: reboot
     late-commands:
-        - sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
-        - sudo apt install gnome-software-plugin-flatpak -y
+        - sudo apt update && apt install git adb zsh pipx python3-full docker-compose-plugin zsh-autosuggestions snapd curl clang ninja-build libgtk-3-dev ubuntu-restricted-extras ffmpeg flatpak python3-pip cmake ca-certificates python3-gi python3-gi-cairo gir1.2-gtk-3.0 libcairo2-dev pkg-config python3-dev libfuse2 jq zsh-theme-powerlevel9k zsh-syntax-highlighting dirmngr gpg curl gawk libc6:amd64 libc6:i386 libegl1:amd64 libegl1:i386 libgbm1:amd64 libgbm1:i386 libgl1-mesa-dri:amd64 libgl1-mesa-dri:i386 libgl1:amd64 libgl1:i386 steam-libs-amd64:amd64 steam-libs-i386:i386 -y
+        - sudo apt install flatpak -y && sudo apt install gnome-software-plugin-flatpak -y;
+        - sudo flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo;
         - if command -v kubectl >/dev/null 2>&1; then echo 'kubectl existe'; else
             curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl";
             chmod +x ./kubectl;
@@ -74,7 +75,6 @@ autoinstall:
             sudo groupadd docker;
             sudo usermod -aG docker $USER;
           fi
-        - apt update && apt install git adb zsh pipx python3-full docker-compose-plugin zsh-autosuggestions snapd curl clang ninja-build libgtk-3-dev ubuntu-restricted-extras ffmpeg flatpak python3-pip cmake ca-certificates python3-gi python3-gi-cairo gir1.2-gtk-3.0 libcairo2-dev pkg-config python3-dev libfuse2 jq zsh-theme-powerlevel9k zsh-syntax-highlighting dirmngr gpg curl gawk libc6:amd64 libc6:i386 libegl1:amd64 libegl1:i386 libgbm1:amd64 libgbm1:i386 libgl1-mesa-dri:amd64 libgl1-mesa-dri:i386 libgl1:amd64 libgl1:i386 steam-libs-amd64:amd64 steam-libs-i386:i386 -y
         - flatpak install flathub --assumeyes com.brave.Browser
         - flatpak install flathub --assumeyes com.github.unrud.VideoDownloader
         - flatpak install flathub --assumeyes org.gnome.font-viewer
