--- a/autoinstall.yml
+++ b/autoinstall.yml
@@ -44,19 +44,6 @@ autoinstall:
         - gpg
         - curl
         - gawk
-        - libc6:amd64
-        - libc6:i386
-        - libegl1:amd64
-        - libegl1:i386
-        - libgbm1:amd64
-        - libgbm1:i386
-        - libgl1-mesa-dri:amd64
-        - libgl1-mesa-dri:i386
-        - libgl1:amd64
-        - libgl1:i386
-        - steam-libs-amd64:amd64
-        - steam-libs-i386:i386
-        - ca-certificates
         - gnupg
         - gh
         
@@ -112,20 +99,32 @@ autoinstall:
         install: true
     updates: all
     shutdown: reboot
-    late-commands:
-        - apt clean
-        - apt autoclean
-        - apt update --fix-missing
-        - dpkg --add-architecture i386
-        - apt update; apt upgrade -y
-        - apt install libc6:i386 -y
-        - systemctl start docker.service
-        - systemctl enable docker.service
-        - chown $USER:$USER /var/run/docker.sock
-        - docker pull postgres
-        - echo "alias update='sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y && sudo apt-get clean && sudo apt-get autoclean && sudo killall snap-store; sudo snap refresh && flatpak update -y;'" >> /home/$USER/.bashrc
-        - echo "alias update='sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y && sudo apt-get clean && sudo apt-get autoclean && sudo killall snap-store; sudo snap refresh && flatpak update -y;'" >> /home/$USER/.zshrc
-        - source ~/.zshrc
+    # late-commands:
+    #     - apt clean
+    #     - apt autoclean
+    #     - apt update --fix-missing
+    #     - dpkg --add-architecture i386
+    #     - apt update; apt upgrade -y
+    #     - apt install libc6:i386 -y
+    #     - systemctl start docker.service
+    #     - systemctl enable docker.service
+    #     - chown $USER:$USER /var/run/docker.sock
+    #     - docker pull postgres
+    #     - echo "alias update='sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y && sudo apt-get clean && sudo apt-get autoclean && sudo killall snap-store; sudo snap refresh && flatpak update -y;'" >> /home/$USER/.bashrc
+    #     - echo "alias update='sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y && sudo apt-get clean && sudo apt-get autoclean && sudo killall snap-store; sudo snap refresh && flatpak update -y;'" >> /home/$USER/.zshrc
+    #     - source ~/.zshrc
+    # - libc6:amd64
+    # - libc6:i386
+    # - libegl1:amd64
+    # - libegl1:i386
+    # - libgbm1:amd64
+    # - libgbm1:i386
+    # - libgl1-mesa-dri:amd64
+    # - libgl1-mesa-dri:i386
+    # - libgl1:amd64
+    # - libgl1:i386
+    # - steam-libs-amd64:amd64
+    # - steam-libs-i386:i386
    # storage:
     #     layout:
     #         name: custom
