--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 ubuntu-24.04.1-desktop-amd64.iso
 ubuntu-24.04.1-desktop-amd64.*
 ubuntu-24.04.1-desktop-amd64*
+ubuntu-24.04.2-desktop-amd64.iso
+ubuntu-24.04.2-desktop-amd64
