--- a/autoinstall.yml
+++ b/autoinstall.yml
@@ -18,33 +18,18 @@ autoinstall:
         - zsh
         - pipx
         - python3-full
-        - zsh-autosuggestions
         - snapd
         - curl
         - clang
         - ninja-build
-        - libgtk-3-dev
         - ubuntu-restricted-extras
         - ffmpeg
-        - flatpak
         - python3-pip
         - cmake
-        - ca-certificates
-        - python3-gi
-        - python3-gi-cairo
-        - gir1.2-gtk-3.0
-        - libcairo2-dev
-        - pkg-config
         - python3-dev
-        - libfuse2
         - jq
-        - zsh-theme-powerlevel9k
-        - zsh-syntax-highlighting
-        - dirmngr
         - gpg
         - curl
-        - gawk
-        - gnupg
         - gh
         
     snaps:
@@ -99,20 +84,20 @@ autoinstall:
         install: true
     updates: all
     shutdown: reboot
-    # late-commands:
+    late-commands:
     #     - apt clean
     #     - apt autoclean
     #     - apt update --fix-missing
     #     - dpkg --add-architecture i386
     #     - apt update; apt upgrade -y
     #     - apt install libc6:i386 -y
-    #     - systemctl start docker.service
-    #     - systemctl enable docker.service
-    #     - chown $USER:$USER /var/run/docker.sock
-    #     - docker pull postgres
-    #     - echo "alias update='sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y && sudo apt-get clean && sudo apt-get autoclean && sudo killall snap-store; sudo snap refresh && flatpak update -y;'" >> /home/$USER/.bashrc
-    #     - echo "alias update='sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y && sudo apt-get clean && sudo apt-get autoclean && sudo killall snap-store; sudo snap refresh && flatpak update -y;'" >> /home/$USER/.zshrc
-    #     - source ~/.zshrc
+         - systemctl start docker.service
+         - systemctl enable docker.service
+         - chown $USER:$USER /var/run/docker.sock
+         - docker pull postgres
+         - echo "alias update='sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y && sudo apt-get clean && sudo apt-get autoclean && sudo killall snap-store; sudo snap refresh && flatpak update -y;'" >> /home/$USER/.bashrc
+         - echo "alias update='sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y && sudo apt-get clean && sudo apt-get autoclean && sudo killall snap-store; sudo snap refresh && flatpak update -y;'" >> /home/$USER/.zshrc
+         - source ~/.zshrc
     # - libc6:amd64
     # - libc6:i386
     # - libegl1:amd64
