--- a/autoinstall.yml
+++ b/autoinstall.yml
@@ -29,6 +29,8 @@ autoinstall:
         - gh
         - ca-certificates
         - gnupg
+        - dirmngr
+        - gawk
 
     snaps:
         - name: gnome-font-viewer
@@ -82,34 +84,39 @@ autoinstall:
     storage:
         layout:
             name: manual
+
     late-commands:
-        - apt-get install dirmngr gpg curl gawk -y
-        - sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
-        - mkdir -p "${ASDF_DATA_DIR:-$HOME/.asdf}/completions"
-        - asdf completion zsh > "${ASDF_DATA_DIR:-$HOME/.asdf}/completions/_asdf"
-        - git clone https://github.com/asdf-vm/asdf.git --branch v0.16.0
-        - export PATH="${ASDF_DATA_DIR:-$HOME/.asdf}/shims:$PATH"
-        - chsh -s $(which zsh)
-        - echo "alias update='sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y && sudo apt-get clean && sudo apt-get autoclean && sudo killall snap-store; sudo snap refresh && flatpak update -y;'" >> /home/$USER/.bashrc
-        - echo "alias update='sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y && sudo apt-get clean && sudo apt-get autoclean && sudo killall snap-store; sudo snap refresh && flatpak update -y;'" >> /home/$USER/.zshrc
-        - source ~/.zshrc
-        - asdf plugin add nodejs https://github.com/asdf-vm/asdf-nodejs.git
-        - asdf install nodejs latest
-        - asdf plugin add
-        -	asdf install java openjdk-11
-        - asdf install java latest
-        - asdf global java openjdk-11
-        - asdf install flutter latest
-        - asdf install flutter latest
-        - asdf global flutter latest
-        - asdf install pyhton latest
-        - asdf install python 3.6.12
-        - systemctl start docker.service
-        - chown $USER:$USER /var/run/docker.sock
-        - usermod -aG docker $USER
-        - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb;
-        - dpkg -i *.deb;
-        - rm -rf *.deb;
+      - echo "Executando pós-instalação" >> /target/root/late-commands.log
+      - set -x
+      - curtin in-target -- sh -c "apt update && apt install -y gnome-software-plugin-flatpak"
+      - curtin in-target -- sh -c "sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+      - curtin in-target -- sh -c "mkdir -p "${ASDF_DATA_DIR:-$HOME/.asdf}/completions""
+      - curtin in-target -- sh -c "asdf completion zsh > "${ASDF_DATA_DIR:-$HOME/.asdf}/completions/_asdf"
+      - curtin in-target -- sh -c "git clone https://github.com/asdf-vm/asdf.git --branch v0.16.0"
+      - curtin in-target -- sh -c "export PATH="${ASDF_DATA_DIR:-$HOME/.asdf}/shims:$PATH"
+      - curtin in-target -- sh -c "chsh -s $(which zsh)"
+      - curtin in-target -- sh -c "echo "alias update='sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y && sudo apt-get clean && sudo apt-get autoclean && sudo killall snap-store; sudo snap refresh && flatpak update -y;'" >> /home/$USER/.bashrc"
+      - curtin in-target -- sh -c "echo "alias update='sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y && sudo apt-get clean && sudo apt-get autoclean && sudo killall snap-store; sudo snap refresh && flatpak update -y;'" >> /home/$USER/.zshrc"
+      - curtin in-target -- sh -c "source ~/.zshrc"
+      - curtin in-target -- sh -c "asdf plugin add nodejs https://github.com/asdf-vm/asdf-nodejs.git"
+
+      - curtin in-target -- sh -c "wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb -O /tmp/chrome.deb"
+      - curtin in-target -- sh -c "dpkg -i /tmp/chrome.deb || apt-get -f install -y"
+      - curtin in-target -- sh -c "rm -rf /tmp/chrome.deb"
+
+      - curtin in-target -- sh -c "asdf install nodejs latest"
+      - curtin in-target -- sh -c "asdf plugin add"
+      -	curtin in-target -- sh -c "asdf install java openjdk-11"
+      - curtin in-target -- sh -c "asdf install java latest"
+      - curtin in-target -- sh -c "asdf global java openjdk-11"
+      - curtin in-target -- sh -c "asdf install flutter latest"
+      - curtin in-target -- sh -c "asdf install flutter latest"
+      - curtin in-target -- sh -c "asdf global flutter latest"
+      - curtin in-target -- sh -c "asdf install pyhton latest"
+      - curtin in-target -- sh -c "asdf install python 3.6.12"
+      - curtin in-target -- sh -c "systemctl start docker.service"
+      - curtin in-target -- sh -c "chown $USER:$USER /var/run/docker.sock"
+      - curtin in-target -- sh -c "usermod -aG docker $USER"
 
 
     network:
