--- a/autoinstall.yml
+++ b/autoinstall.yml
@@ -1,118 +1,81 @@
 autoinstall:
-    version: 1
-    identity:
-        realname: 'Júlio César'
-        hostname: ubuntu-desktop
-        username: jc
-        password: '$6$.7PR4Fjwsf4VPGhG$O5PjMjRrLs8bLR6OjS5.KLo6j/kt5/2Ac6Jv1hOUtbAz.JNIE/2yCdfhZJkK82ZG.7tvYlNBDbrUdFjZyCUEz/'
-    locale: en_US.UTF-8
-    keyboard:
-        layout: br
-    timezone: "America/Sao_Paulo"
-    packages:
-        - gimp
-        - git
-        - wget
-        - adb
-        - zsh
-        - pipx
-        - python3-full
-        - snapd
-        - curl
-        - clang
-        - ninja-build
-        - ffmpeg
-        - cmake
-        - jq
-        - gpg
-        - curl
-        - gh
-        - ca-certificates
-        - gnupg
-        - dirmngr
-        - gawk
+  version: 1
+  identity:
+    realname: "Júlio César"
+    hostname: ubuntu-desktop
+    username: jc
+    password: "$y$j9T$QFynNF5eCXUhh1YxtmKIu/$7oJhFMMne6vnI1bXnh0LNDhmA0LyU/Pu1IQPqC9eQj9"
+  locale: en_US.UTF-8
+  keyboard:
+    layout: br
+  timezone: "America/Sao_Paulo"
+  packages:
+    - gimp
+    - git
+    - wget
+    - adb
+    - zsh
+    - pipx
+    - python3-full
+    - snapd
+    - curl
+    - clang
+    - ninja-build
+    - ffmpeg
+    - cmake
+    - jq
+    - gpg
+    - curl
+    - gh
+    - ca-certificates
+    - gnupg
+    - dirmngr
+    - gawk
 
-    snaps:
-        - name: gnome-font-viewer
-          channel: stable
-          classic: false
-        - name: bolls
-          channel: stable
-          classic: false
-        - name: bluemail
-          channel: stable
-          classic: false
-        - name: telegram-desktop
-          channel: stable
-          classic: false
-        - name: pencil
-          channel: stable
-          classic: false
-        - name: audacity
-          channel: stable
-          classic: false
-        - name: discord
-          channel: stable
-          classic: false
-        - name: steam
-          channel: stable
-          classic: false
-        - name: docker
-          channel: stable
-          classic: false
-        - name: code
-          channel: stable
-          classic: true
-        - name: gitkraken
-          channel: stable
-          classic: true
-        - name: intellij-idea-community
-          channel: stable
-          classic: true
-        - name: android-studio
-          channel: stable
-          classic: true
-        - name: brave
-          channel: stable
-          classic: false
-    codecs:
-        install: true
-    drivers:
-        install: true
-    updates: all
-    # refresh-installer:
-    #   update: true
-    #   channel: latest/edge
-    shutdown: reboot
-    storage:
-        layout:
-            name: manual
+  snaps:
+    - name: gnome-font-viewer
+      channel: stable
+      classic: false
+    - name: bolls
+      channel: stable
+      classic: false
+    - name: bluemail
+      channel: stable
+      classic: false
+    - name: pencil
+      channel: stable
+      classic: false
+    - name: audacity
+      channel: stable
+      classic: false
+    - name: discord
+      channel: stable
+      classic: false
+    - name: steam
+      channel: stable
+      classic: false
+    - name: docker
+      channel: stable
+      classic: false
+    - name: code
+      channel: stable
+      classic: true
+    - name: gitkraken
+      channel: stable
+      classic: true
+    - name: intellij-idea-community
+      channel: stable
+      classic: true
+    - name: android-studio
+      channel: stable
+      classic: true
 
-    late-commands:
-      - curtin in-target -- apt-get update
-      - curtin in-target apt update && apt install -y gnome-software-plugin-flatpak
-      - curtin in-target sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
-      - curtin in-target mkdir -p "${ASDF_DATA_DIR:-$HOME/.asdf}/completions"
-      - curtin in-target git clone https://github.com/asdf-vm/asdf.git --branch v0.16.0 ${ASDF_DATA_DIR:-$HOME/.asdf}
-      - curtin in-target echo ". ${ASDF_DATA_DIR:-$HOME/.asdf}/asdf.sh" >> ~/.bashrc
-      - curtin in-target echo ". ${ASDF_DATA_DIR:-$HOME/.asdf}/asdf.sh" >> ~/.zshrc
-      - curtin in-target source ~/.zshrc
-      - curtin in-target asdf plugin add nodejs https://github.com/asdf-vm/asdf-nodejs.git
-      - curtin in-target wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb -O /tmp/chrome.deb
-      - curtin in-target dpkg -i /tmp/chrome.deb || apt-get -f install -y
-      - curtin in-target rm -rf /tmp/chrome.deb
-      - curtin in-target asdf install nodejs latest
-      - curtin in-target asdf install java openjdk-11
-      - curtin in-target asdf install java latest
-      - curtin in-target asdf global java openjdk-11
-      - curtin in-target asdf install flutter latest
-      - curtin in-target asdf global flutter latest
-      - curtin in-target asdf install python latest
-      - curtin in-target asdf install python 3.6.12
-      - curtin in-target systemctl start docker.service
-      - curtin in-target chown $USER:$USER /var/run/docker.sock
-      - curtin in-target usermod -aG docker $USER
-      - curtin in-target echo "alias update='sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y && sudo apt-get clean && sudo apt-get autoclean && sudo killall snap-store; sudo snap refresh && flatpak update -y;'" >> /home/$USER/.bashrc
-      - curtin in-target echo "alias update='sudo apt update && sudo apt upgrade -y && sudo apt autoremove -y && sudo apt-get clean && sudo apt-get autoclean && sudo killall snap-store; sudo snap refresh && flatpak update -y;'" >> /home/$USER/.zshrc
-
-
+  codecs:
+    install: true
+  drivers:
+    install: true
+  updates: all
+  shutdown: reboot
+  storage:
+    layout:
+      name: manual
